@@ -53,6 +53,8 @@ export("gridSVGCoords",
        "viewportConvertWidth",
        "viewportConvertHeight")
 
+useDynLib("gridSVG")
+
 # So other PACKAGES can write translation methods for new grobs
 export("grobToDev")
 export("primToDev")
