@@ -55,6 +55,12 @@ Changes from 0.9 to 1.0-0
 
 17. grobs can now be prepended with comments when exported to SVG. (Simon)
 
+18. Use data URIs to embed images inline in SVG (for rasterGrobs). Allows
+    us to truly create standalone SVG files, rather than SVG & a lot of
+    PNGs. Lifted C code from the 'markdown' package (permissive licence)
+    to do the job. Just keeping a subset of the C code ('markdown' does a
+    lot of cool stuff that we don't need). (Simon)
+
 
 Changes from 0.9-0 to 0.9-4
 ===========================
